syntax = "proto3";
package io.scyna.customer.proto;
option java_multiple_files = true;
option java_package = "io.scyna.ex.account.proto";

message CreateAccountRequest 
{
  string Email = 1;
  string Name = 3;
}

message CreateAccountResponse
{
  uint64 ID = 1;
}

message GetAccountByEmailRequest 
{
  string Email = 1;
}

message GetAccountByIDRequest 
{
  uint64 ID = 1;
}

message GetAccountResponse
{
  string ID = 1;
  string Name = 2;
  string Email = 3;
}
